--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -49,7 +49,7 @@
 <nav>
     <a href="{% url 'dashboard:displayblog' %}">Blog</a>
     <a href="{% url 'dashboard:patient' %}">Patient Details</a>
-    <a href="{% url 'dashboard:appointments' %}">Appointments</a>
+    <a href="{% url 'dashboard:appoinments' %}">Appointments</a>
     <a href="#">Logout</a>
 </nav>
 
