--- a/dashboard/templates/dashboard/displayblog.html
+++ b/dashboard/templates/dashboard/displayblog.html
@@ -22,6 +22,8 @@
             padding: 20px;
             box-sizing: border-box;
             overflow-x: auto;
+            margin-top: 64px;
+            
         }
 
         table {
