--- a/dashboard/templates/dashboard/login.html
+++ b/dashboard/templates/dashboard/login.html
@@ -75,16 +75,18 @@
         
     </style>
 
-<div class="center">
-    <div class="login-container">
-        <h2 class="my-6 text-xl font-bold">Login</h2>
-        <form>
-            <input type="text" placeholder="Username" required>
-            <input type="password" placeholder="Password" required>
-            <button class="login" type="submit">Login</button>
-        </form>
+    <div class="center">
+        <div class="login-container">
+            <h2 class="my-6 text-xl font-bold">Login</h2>
+            <form method="post" action="{% url 'superuserlogin' %}">
+                {% csrf_token %}
+                <input type="text" name="username" placeholder="Username" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <button class="login" type="submit">Login</button>
+            </form>
+        </div>
     </div>
-</div>
+    
 
 {% endblock %}
 
