--- a/dashboard/templates/dashboard/patient.html
+++ b/dashboard/templates/dashboard/patient.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/base.html' %}
 
-{% block title %} Rema devi | Dashboard {% endblock %}
+{% block title %} Rema devi | patients {% endblock %}
 {% block content %}
 
 
@@ -21,6 +21,7 @@
             padding: 20px;
             box-sizing: border-box;
             overflow-x: auto;
+            margin-top: 64px;
         }
 
         table {
