--- a/dashboard/templates/dashboard/login.html
+++ b/dashboard/templates/dashboard/login.html
@@ -78,9 +78,10 @@
 <div class="center">
     <div class="login-container">
         <h2 class="my-6 text-xl font-bold">Login</h2>
-        <form>
-            <input type="text" placeholder="Username" required>
-            <input type="password" placeholder="Password" required>
+        <form method="post" action="{% url 'dashboard:login' %}">
+            {% csrf_token %}
+            <input type="text" name="username" placeholder="Username" required>
+            <input type="password" name="password" placeholder="Password" required>
             <button class="login" type="submit">Login</button>
         </form>
     </div>
