--- a/dashboard/templates/dashboard/login.html
+++ b/dashboard/templates/dashboard/login.html
@@ -78,9 +78,10 @@
     <div class="center">
         <div class="login-container">
             <h2 class="my-6 text-xl font-bold">Login</h2>
-            <form method="post" action="{% url 'dashboard:login' %}">
+            <form method="post" action="{% url 'admin_login' %}">
                 {% csrf_token %}
-                {{ form.as_p }}
+                <input type="text" name="username" placeholder="Username" required>
+                <input type="password" name="password" placeholder="Password" required>
                 <button class="login" type="submit">Login</button>
             </form>
         </div>
