--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -45,14 +45,14 @@
 <header>
     <h1>DISHA</h1>
 </header>
-
+{% if user.is_superuser %}
 <nav>
     <a href="{% url 'dashboard:displayblog' %}">Blog</a>
     <a href="{% url 'dashboard:patient' %}">Patient Details</a>
     <a href="{% url 'dashboard:appoinments' %}">Appointments</a>
     <a href="#">Logout</a>
 </nav>
-
+{% endif %}
 <!-- Your dashboard content goes here -->
 {% block content %}
 {% endblock %}
