--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -50,7 +50,7 @@
     <a href="{% url 'dashboard:displayblog' %}">Blog</a>
     <a href="{% url 'dashboard:patient' %}">Patient Details</a>
     <a href="{% url 'dashboard:appoinments' %}">Appointments</a>
-    <a href="#">Logout</a>
+    <a href="{% url 'dashboard:logout' %}">Logout</a>
 </nav>
 {% endif %}
 <!-- Your dashboard content goes here -->
