--- a/dashboard/templates/dashboard/displayblog.html
+++ b/dashboard/templates/dashboard/displayblog.html
@@ -107,7 +107,7 @@
                 {% for blog in blogs %}
                     <tr>
                         <td>{{ blog.date }}</td>
-                        <td><a href="#">{{ blog.heading }}</a></td>
+                        <td><a href="#">{{ blog.title }}</a></td>
                         <td>
                             <a href="{% url 'dashboard:edit_blog' blog.id %}">
                                 <img class="edit-btn" src="{% static 'image/edit-246.png' %}" alt="Edit">
