--- a/dashboard/templates/dashboard/detail.html
+++ b/dashboard/templates/dashboard/detail.html
@@ -136,6 +136,23 @@
     </script>
         
 </div>
+<div class="pagination">
+    <span class="step-links">
+        {% if tasks.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ tasks.previous_page_number }}" class="pagination-link">previous</a>
+        {% endif %}
+    
+        <span class="current-page">
+            Page {{ tasks.number }} of {{ tasks.paginator.num_pages }}.
+        </span>
+        
+        {% if tasks.has_next %}
+            <a href="?page={{ tasks.next_page_number }}" class="pagination-link">next</a>
+            <a href="?page={{ tasks.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
 {% endblock %}
 
 
