--- a/dashboard/templates/dashboard/edit.html
+++ b/dashboard/templates/dashboard/edit.html
@@ -50,11 +50,13 @@
             color: white;
         }
     </style>
+    {{ form.media }}
 
 <div class="dashboard-form">
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        <h2>Add Blog</h2>
+        <h2>Edit Blog</h2>
+        {% comment %} <img src="{{ blog.image.url }}" alt="Blog Image" style="height:10rem;width:15rem;"> <!-- Display the existing image --> {% endcomment %}
         {{ form.date }}
         {{ form.title }}
         {{ form.content }}
@@ -62,6 +64,7 @@
         <button type="submit">Submit</button>
     </form>
 </div>
+
 
 </body>
 </html>
