--- a/dashboard/templates/dashboard/patient_detail.html
+++ b/dashboard/templates/dashboard/patient_detail.html
@@ -73,10 +73,11 @@
             gap: 2rem;
         }
         .textarea1{
-            width: 38.5%;
+            width: 72.5%;
         }
         .hehe{
             height:3rem;
+            width: 23rem;
         }
     </style>
 
